--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+div#root,
+.App {
+  height: 100%;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +39,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+a,
+a:hover {
+  text-decoration: none;
+  color: inherit;
+}
+
+.link {
+  color: #0066c0;
 }
